--- a/test.ipynb
+++ b/test.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config.update(k)"
+    "config.update()"
    ]
   },
   {
@@ -112,6 +112,68 @@
     "    for line in all_data:\n",
     "        line = line.strip()\n",
     "        f.write(line + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "dir = \"ft_ckpt/demo/audio_slice\"\n",
+    "p = Path(dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<generator object Path.glob at 0x7f5ac43d3c80>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p.glob(\"*.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def move_files_simple(source_dir, target_dir):\n",
+    "    source_path = Path(source_dir)\n",
+    "    target_path = Path(target_dir)\n",
+    "    \n",
+    "    # 确保目标目录存在\n",
+    "    target_path.mkdir(parents=True, exist_ok=True)\n",
+    "    \n",
+    "    # 移动所有文件\n",
+    "    for file_path in source_path.glob(\"*.wav\"):\n",
+    "        if file_path.is_file():\n",
+    "            file_path.rename(target_path / file_path.name)\n",
+    "            print(f\"Moved: {file_path.name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "move_files_simple(p, p.parent.parent/'sunyanzi')"
    ]
   }
  ],
