--- a/test.ipynb
+++ b/test.ipynb
@@ -116,35 +116,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
     "\n",
-    "dir = \"ft_ckpt/demo/audio_slice\"\n",
+    "\n",
+    "dir = \"ckpts/sunyanzi/audio_slice/sunyanzi\"\n",
     "p = Path(dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<generator object Path.glob at 0x7f5ac43d3c80>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p.glob(\"*.wav\")"
    ]
   },
   {
@@ -175,6 +156,197 @@
    "source": [
     "move_files_simple(p, p.parent.parent/'sunyanzi')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "t = Path(\"ckpts/sunyanzi/audio_slice/sunyanzi/sunyanzi_000000.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sunyanzi_000000_f0.npy'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"_\".join(t.stem.split('_')[:2]) + '_f0.npy'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "any(t.glob(\"g_*.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    " list(t.glob(\"g_*.pth\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== Python Environment ===\n",
+      "Python executable: /home/ljj/miniconda3/envs/sovits-svc/bin/python\n",
+      "Python version: 3.8.19 (default, Mar 20 2024, 19:58:24) \n",
+      "[GCC 11.2.0]\n",
+      "\n",
+      "=== PyTorch Information ===\n",
+      "PyTorch location: /home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages/torch/__init__.py\n",
+      "PyTorch version: 2.2.1+cu121\n",
+      "CUDA available: True\n",
+      "CUDA version: 12.1\n",
+      "CUDNN version: 8902\n",
+      "\n",
+      "=== Environment Variables ===\n",
+      "CONDA_PREFIX: /home/ljj/miniconda3/envs/sovits-svc\n",
+      "LD_LIBRARY_PATH: Not set\n",
+      "\n",
+      "=== CUDA Device Information ===\n",
+      "Current device: 0\n",
+      "Device name: NVIDIA GeForce RTX 4090\n",
+      "Device capability: (8, 9)\n",
+      "\n",
+      "=== Python Path ===\n",
+      "/mnt/e/Workspace/growth/audio/so-vits-svc\n",
+      "/home/ljj/miniconda3/envs/sovits-svc/lib/python38.zip\n",
+      "/home/ljj/miniconda3/envs/sovits-svc/lib/python3.8\n",
+      "/home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/lib-dynload\n",
+      "\n",
+      "/home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages\n",
+      "\n",
+      "=== CUDA Library Check ===\n",
+      "Looking for CUDA libraries in: /home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages/torch\n",
+      "\n",
+      "Checking /home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages/torch/lib:\n",
+      "Found: libtorch_cuda_linalg.so\n",
+      "Found: libtorch_cuda.so\n",
+      "Found: libc10_cuda.so\n",
+      "\n",
+      "Checking /home/ljj/miniconda3/envs/sovits-svc:\n",
+      "\n",
+      "Checking /usr/local/cuda/lib64:\n",
+      "Found: libcudart.so.11.0\n",
+      "Found: libcudart.so\n",
+      "Found: libcudart.so.11.7.99\n",
+      "Found: libcudadevrt.a\n",
+      "Found: libcudart_static.a\n",
+      "\n",
+      "Checking /usr/lib/x86_64-linux-gnu:\n",
+      "Found: libicudata.so.70\n",
+      "Found: libicudata.so.70.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "import torch\n",
+    "import torch.backends.cudnn as cudnn\n",
+    "\n",
+    "def check_environment():\n",
+    "    print(\"=== Python Environment ===\")\n",
+    "    print(f\"Python executable: {sys.executable}\")\n",
+    "    print(f\"Python version: {sys.version}\")\n",
+    "    \n",
+    "    print(\"\\n=== PyTorch Information ===\")\n",
+    "    print(f\"PyTorch location: {torch.__file__}\")\n",
+    "    print(f\"PyTorch version: {torch.__version__}\")\n",
+    "    print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
+    "    print(f\"CUDA version: {torch.version.cuda}\")\n",
+    "    print(f\"CUDNN version: {cudnn.version()}\")\n",
+    "    \n",
+    "    print(\"\\n=== Environment Variables ===\")\n",
+    "    print(f\"CONDA_PREFIX: {os.environ.get('CONDA_PREFIX', 'Not set')}\")\n",
+    "    print(f\"LD_LIBRARY_PATH: {os.environ.get('LD_LIBRARY_PATH', 'Not set')}\")\n",
+    "    \n",
+    "    if torch.cuda.is_available():\n",
+    "        print(\"\\n=== CUDA Device Information ===\")\n",
+    "        print(f\"Current device: {torch.cuda.current_device()}\")\n",
+    "        print(f\"Device name: {torch.cuda.get_device_name()}\")\n",
+    "        try:\n",
+    "            print(f\"Device capability: {torch.cuda.get_device_capability()}\")\n",
+    "        except AttributeError:\n",
+    "            pass\n",
+    "    \n",
+    "    print(\"\\n=== Python Path ===\")\n",
+    "    for path in sys.path:\n",
+    "        print(path)\n",
+    "    \n",
+    "    # 尝试定位 CUDA 相关库\n",
+    "    print(\"\\n=== CUDA Library Check ===\")\n",
+    "    torch_path = os.path.dirname(torch.__file__)\n",
+    "    print(f\"Looking for CUDA libraries in: {torch_path}\")\n",
+    "    \n",
+    "    # 检查常见的库文件位置\n",
+    "    cuda_paths = [\n",
+    "        os.path.join(torch_path, 'lib'),\n",
+    "        os.environ.get('CONDA_PREFIX', ''),\n",
+    "        '/usr/local/cuda/lib64',\n",
+    "        '/usr/lib/x86_64-linux-gnu'\n",
+    "    ]\n",
+    "    \n",
+    "    for path in cuda_paths:\n",
+    "        if os.path.exists(path):\n",
+    "            print(f\"\\nChecking {path}:\")\n",
+    "            cuda_libs = [f for f in os.listdir(path) if 'cuda' in f.lower() or 'cudnn' in f.lower()]\n",
+    "            for lib in cuda_libs:\n",
+    "                print(f\"Found: {lib}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    check_environment()"
+   ]
   }
  ],
  "metadata": {
@@ -193,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.20"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
