--- a/test.ipynb
+++ b/test.ipynb
@@ -230,65 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=== Python Environment ===\n",
-      "Python executable: /home/ljj/miniconda3/envs/sovits-svc/bin/python\n",
-      "Python version: 3.8.19 (default, Mar 20 2024, 19:58:24) \n",
-      "[GCC 11.2.0]\n",
-      "\n",
-      "=== PyTorch Information ===\n",
-      "PyTorch location: /home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages/torch/__init__.py\n",
-      "PyTorch version: 2.2.1+cu121\n",
-      "CUDA available: True\n",
-      "CUDA version: 12.1\n",
-      "CUDNN version: 8902\n",
-      "\n",
-      "=== Environment Variables ===\n",
-      "CONDA_PREFIX: /home/ljj/miniconda3/envs/sovits-svc\n",
-      "LD_LIBRARY_PATH: Not set\n",
-      "\n",
-      "=== CUDA Device Information ===\n",
-      "Current device: 0\n",
-      "Device name: NVIDIA GeForce RTX 4090\n",
-      "Device capability: (8, 9)\n",
-      "\n",
-      "=== Python Path ===\n",
-      "/mnt/e/Workspace/growth/audio/so-vits-svc\n",
-      "/home/ljj/miniconda3/envs/sovits-svc/lib/python38.zip\n",
-      "/home/ljj/miniconda3/envs/sovits-svc/lib/python3.8\n",
-      "/home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/lib-dynload\n",
-      "\n",
-      "/home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages\n",
-      "\n",
-      "=== CUDA Library Check ===\n",
-      "Looking for CUDA libraries in: /home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages/torch\n",
-      "\n",
-      "Checking /home/ljj/miniconda3/envs/sovits-svc/lib/python3.8/site-packages/torch/lib:\n",
-      "Found: libtorch_cuda_linalg.so\n",
-      "Found: libtorch_cuda.so\n",
-      "Found: libc10_cuda.so\n",
-      "\n",
-      "Checking /home/ljj/miniconda3/envs/sovits-svc:\n",
-      "\n",
-      "Checking /usr/local/cuda/lib64:\n",
-      "Found: libcudart.so.11.0\n",
-      "Found: libcudart.so\n",
-      "Found: libcudart.so.11.7.99\n",
-      "Found: libcudadevrt.a\n",
-      "Found: libcudart_static.a\n",
-      "\n",
-      "Checking /usr/lib/x86_64-linux-gnu:\n",
-      "Found: libicudata.so.70\n",
-      "Found: libicudata.so.70.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -347,6 +291,72 @@
     "if __name__ == \"__main__\":\n",
     "    check_environment()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sovits底膜专用\n",
+    "def remove_optimizer(path):\n",
+    "    ckpt = torch.load(path, map_location='cpu')\n",
+    "    ckpt['optimizer'] = None\n",
+    "    torch.save(ckpt, path)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "model_dir = Path(\"ckpts/sunyanzi/diffusion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f_list = list(model_dir.glob(\"*.pt\"))\n",
+    "\n",
+    "f_list.sort(\n",
+    "    key=lambda f: int(\"\".join(filter(str.isdigit, f))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(f_list)"
+   ]
   }
  ],
  "metadata": {
@@ -365,7 +375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
