--- a/test.ipynb
+++ b/test.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +313,15 @@
     "    ckpt['optimizer'] = None\n",
     "    torch.save(ckpt, path)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remove_optimizer(\"/datadisk/liujunjie/so-vits-svc/ckpts/test/models/D_120000.pth\")"
    ]
   },
   {
@@ -340,22 +349,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "69729"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(f_list)"
+    "import os\n",
+    "\n",
+    "len(os.listdir(\"/datadisk/liujunjie/so-vits-svc/raw_audios/preprocess/sing_10s/timbre_feature\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from multiprocessing.managers import BaseManager\n",
+    "import time\n",
+    "\n",
+    "def connect_to_server():\n",
+    "    # 定义QueueManager\n",
+    "    class QueueManager(BaseManager):\n",
+    "        pass\n",
+    "\n",
+    "    # 注册队列\n",
+    "    QueueManager.register('get_train_queue')\n",
+    "    QueueManager.register('get_dev_queue')\n",
+    "\n",
+    "    # 创建管理器实例\n",
+    "    manager = QueueManager(\n",
+    "        address=('127.0.0.1', 12345),\n",
+    "        authkey=b'liujunjieabracadabra'\n",
+    "    )\n",
+    "\n",
+    "    # 尝试连接\n",
+    "    try:\n",
+    "        manager.connect()\n",
+    "        print(\"成功连接到服务器\")\n",
+    "        return manager\n",
+    "    except Exception as e:\n",
+    "        print(f\"连接失败: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "def main():\n",
+    "    # 连接服务器\n",
+    "    manager = connect_to_server()\n",
+    "    if not manager:\n",
+    "        return\n",
+    "\n",
+    "    # 获取队列\n",
+    "    train_queue = manager.get_train_queue()\n",
+    "    # dev_queue = manager.get_dev_queue()\n",
+    "\n",
+    "    # 持续从队列获取数据\n",
+    "    try:\n",
+    "        while True:\n",
+    "            # 尝试从训练队列获取数据\n",
+    "            try:\n",
+    "                train_data = train_queue.get(timeout=5)  # 5秒超时\n",
+    "                print(\"收到训练数据:\", train_data)\n",
+    "                # 这里处理train_data...\n",
+    "            except:\n",
+    "                print(\"训练队列暂无数据\")\n",
+    "\n",
+    "            # # 尝试从开发队列获取数据\n",
+    "            # try:\n",
+    "            #     dev_data = dev_queue.get(timeout=5)  # 5秒超时\n",
+    "            #     print(\"收到开发数据:\", dev_data)\n",
+    "            #     # 这里处理dev_data...\n",
+    "            # except:\n",
+    "            #     print(\"开发队列暂无数据\")\n",
+    "\n",
+    "            time.sleep(1)  # 避免过于频繁的请求\n",
+    "\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"程序终止\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"运行出错: {e}\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1026100"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "len(os.listdir(\"/datadisk/liujunjie/so-vits-svc/Data/sovits_svc/f0s\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1024580"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = []\n",
+    "with open(\"Data/raw_text.list\",'r') as f:\n",
+    "    for line in f:\n",
+    "        data.append(line.strip())\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.shuffle(data)\n",
+    "\n",
+    "data = data[:60000]\n",
+    "\n",
+    "new_data = []\n",
+    "\n",
+    "for line in data:\n",
+    "    line = line.strip().split(\"|\")\n",
+    "    if len(line[2]) < 30:\n",
+    "        new_data.append(line)\n",
+    "    if len(new_data) > 60000:\n",
+    "        break\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "952\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "sing_spk_info = json.load(open(\"Data/backup/sing_spk_info.json\",'r'))\n",
+    "print(len(sing_spk_info))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sing_data = []\n",
+    "with open(\"/datadisk/liujunjie/so-vits-svc/Data/sing_raw_text.list\",'r') as f:\n",
+    "    for line in f:\n",
+    "        line = line.strip()\n",
+    "        sing_data.append(line)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in new_data:\n",
+    "    # line = line.strip().split(\"|\")\n",
+    "    if line[2] not in sing_spk_info:\n",
+    "        sing_spk_info[line[2]] = len(sing_spk_info)\n",
+    "    sing_data.append(\"|\".join(line))\n",
+    "\n",
+    "json.dump(sing_spk_info,open(\"Data/sovits_svc/sing_spk_info.json\",'w'),indent=4,ensure_ascii=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random.shuffle(sing_data)\n",
+    "\n",
+    "with open(\"Data/sing_raw_text.list\",'w') as f:\n",
+    "    for line in sing_data:\n",
+    "        f.write(line + '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1144036"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "len(os.listdir(\"Data/sovits_svc/ssls\"))"
    ]
   }
  ],
